# NASDAQ-Order-Book

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildit.sh  runit.sh
SampleOutput/: sample_vwap_1.txt  sample_vwap_2.txt  sample_vwap_3.txt  sample_vwap_4.txt  sample_vwap_5.txt  sample_vwap_6.txt  sample_vwap_7.txt
src/: CMakeLists.txt  cliargs.h  main.cpp
src/bookkeeping/: OrderBook.cpp  OrderBook.h  VWAPManager.cpp  VWAPManager.h
src/data_structures/: mempool.h
src/events/: ProcessSystemEvent.hpp  SystemEventSequence.h  SystemEvents.h
src/ledger/: PerStockLedger.cpp  PerStockLedger.h  PerStockLedgerConstants.h  PerStockLedgerEntry.h
src/messages/: AddOrder.cpp  AddOrder.h  AddOrder.hpp  AddOrderWithMPID.hpp  BinaryMessageWrapper.h  BrokenTradeOrOrderExecution.hpp  Message.h  Message.hpp  MessageConstants.h  MessageHeader.cpp  MessageHeader.h  MessageHeader.hpp  MessageUnion.h  OrderCancel.hpp  OrderDelete.hpp  OrderExecuted.hpp  OrderExecutedWithPrice.hpp  OrderReplace.hpp  ProcessMessage.cpp  StockDirectory.hpp  StockTradingAction.cpp  StockTradingAction.hpp  SystemEvent.cpp  SystemEvent.hpp  TradeCross.hpp  TradeNonCross.hpp
src/orderbook/: LedgerEntry.h  OrderBook.cpp  OrderBook.h  OrderBookConstants.h  OrderBookEntry.h  PerStockLedgerEntry.h  PerStockOrderBook.cpp  PerStockOrderBook.h  PerStockOrderBookConstants.h  PerStockOrderBookEntry.h
src/orderstate/: PerStockOrderState.cpp  PerStockOrderState.h  PerStockOrderStateConstants.h  PerStockOrderStateEntry.h
src/rv/: PerStockRealizedVariance.hpp  PerStockRealizedVarianceConstants.h  PerStockRealizedVarianceCorrection.h  PerStockRealizedVariancePrefixes.hpp  RealizedVarianceQueryResults.hpp
src/shard/: ShardConsumer.hpp  ShardManager.hpp  ThreadConstants.h
src/twap/: PerStockTWAP.hpp  PerStockTWAPConstants.h  PerStockTWAPPrefixes.hpp  TWAPQueryResults.hpp
src/utils/: endian_utils.h  endian_utils.hpp  logarithm_price_cache_utils.hpp  message_utils.hpp  queue_utils.cpp  queue_utils.h  queue_wrapper.h  string_utils.hpp  thread_utils.hpp  time_utils.hpp
src/vwap/: PerStockVWAP.h  PerStockVWAP.hpp  PerStockVWAPConstants.h  PerStockVWAPCorrection.h  PerStockVWAPPrefixes.hpp  VWAPAccumulator.hpp  VWAPQueryResults.hpp
